--- a/style.css
+++ b/style.css
@@ -125,15 +125,44 @@ img{
     gap: 15px;
 }
 
+/* footer related styles */
+
+footer{
+    color: #ffffff;
+    background-color: black;
+    text-align: center;
+    height: 17em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer h3{
+    margin-bottom: 40px;
+}
+.ftr_text{
+    margin-top: 40px;
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    column-gap: 30px;
+}
+
 
 /* responsive for tablet */
 
-@media screen and (max-width:992px) {
+@media screen and (max-width:992px) and (min-width:577px) {
 
     .banner{
         margin-top: 0px;
         border-radius: 0px;
     }
+
+    .banner-img{
+    /* background-color: red;
+    max-width: 619px;
+    margin-top: 2.5em; */
+    margin-bottom: -5rem;
+}
 
     /* .banner-text-content button {
         margin-bottom: 10px;
@@ -156,6 +185,11 @@ img{
     .upcoming-matches-right{
         grid-template-columns: repeat(2,1fr);
     }
+
+    .ftr_text{
+        grid-template-columns: repeat(3,1fr);
+    }
+    
 }
 
 /* Responsive for mobile device */
@@ -184,6 +218,15 @@ img{
     .upcoming-matches-right{
         grid-template-columns: 1fr;
         margin: 5px;
+    }
+
+    footer{
+        height: 20em;
+    }
+
+        .ftr_text{
+        grid-template-columns: 1fr;
+        gap: 20px;
     }
 
 }
